fixed requested spacing on resources

--- a/sass/moons/_resources.scss
+++ b/sass/moons/_resources.scss
@@ -1,6 +1,6 @@
 .resources {
 	background-color: $color-4;
-	padding: 60px 0 40px;
+	padding: 40px 0;
 
 	@include bp (900px) {
 		padding: 40px 0;
